clarified list comprehensions

--- a/tutorials/day01_tutorial_python_basics.ipynb
+++ b/tutorials/day01_tutorial_python_basics.ipynb
@@ -23,6 +23,7 @@
       "name": "day01_tutorial_python_basics.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -72,7 +73,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pEfEMqf9SJpM"
+        "id": "pEfEMqf9SJpM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "477b4dc3-1ffc-412a-f259-cd6048348a95"
       },
       "source": [
         "x = 4              # integer\n",
@@ -87,8 +92,19 @@
         "s = \"This is a string\"  # string\n",
         "print(s, type(s))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4 <class 'int'>\n",
+            "True <class 'bool'>\n",
+            "3.7 <class 'float'>\n",
+            "This is a string <class 'str'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -103,7 +119,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tjGBIhNtSJpN"
+        "id": "tjGBIhNtSJpN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c752ea0b-bc54-4909-f0a5-43e260f092eb"
       },
       "source": [
         "x = 4            # integer\n",
@@ -129,8 +149,18 @@
         "print(z,z1,z2,z3,z4)\n",
         "print(z5,z6,z7,z8)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "18 8 12 6 18 2\n",
+            "3.7 1.7000000000000002 1.2333333333333334 1.0 13.690000000000001\n",
+            "3.7 13.690000000000001 4 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -146,7 +176,11 @@
       "cell_type": "code",
       "metadata": {
         "scrolled": true,
-        "id": "PVAKCDuJSJpN"
+        "id": "PVAKCDuJSJpN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9d8e622a-296f-4938-824d-e7cb2264d7cd"
       },
       "source": [
         "import math\n",
@@ -174,8 +208,28 @@
         "x = math.inf             # infinity\n",
         "print(math.isinf(x))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2.0\n",
+            "16.0\n",
+            "54.598150033144236\n",
+            "2.0\n",
+            "4.0\n",
+            "24\n",
+            "1\n",
+            "0\n",
+            "0\n",
+            "3.6739403974420594e-16\n",
+            "0.9999999869751758\n",
+            "True\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -190,7 +244,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iquflBeuSJpO"
+        "id": "iquflBeuSJpO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8c18e308-4110-49be-ca0a-d543bfe73286"
       },
       "source": [
         "y1 = True\n",
@@ -200,8 +258,18 @@
         "print(y1 or y2)        # logical OR\n",
         "print(y1 and not y2)   # logical NOT"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n",
+            "True\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -216,7 +284,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5T44kXN6SJpP"
+        "id": "5T44kXN6SJpP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e61786b5-651b-45ad-b6e3-b15e7d46b873"
       },
       "source": [
         "s1 = \"This\"\n",
@@ -240,8 +312,29 @@
         "print(s2 + \" too\")                # string concatenation\n",
         "print((s1 + \" \")* 3)              # replicate the string 3 times"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "his\n",
+            "4\n",
+            "Length of string is 4\n",
+            "THIS\n",
+            "this\n",
+            "This\n",
+            "This is another string\n",
+            "That at a string\n",
+            "8\n",
+            "True\n",
+            "True\n",
+            "False\n",
+            "This is a string too\n",
+            "This This This \n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -272,7 +365,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-En2nGo3SJpP",
-        "outputId": "5f9fece0-9850-42c5-d8e9-f17b213be7af"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aae7b4d1-7a09-4ada-ac3c-09006dcb1a6c"
       },
       "source": [
         "intlist = [1, 3, 5, 7, 9]\n",
@@ -298,7 +394,7 @@
         "intlist.sort(reverse=True)       # sort elements in descending order\n",
         "print(intlist)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +423,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-8JeBEurSJpQ",
-        "outputId": "80b70971-e166-4575-cadb-7a497e03b860"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a1af009d-43bc-44df-ca63-8a2974f7376e"
       },
       "source": [
         "mylist = ['this', 'is', 'a', 'list']\n",
@@ -346,7 +445,7 @@
         "mylist.remove(\"is\")              # remove element from list\n",
         "print(mylist)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,7 +477,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "EIhasMwVSJpR",
-        "outputId": "effcc6f9-6cc8-43f4-f8cf-65d3ae46611b"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f1efc37a-5404-4b1f-b80b-88f0b78b0177"
       },
       "source": [
         "abbrev = {}\n",
@@ -406,7 +508,7 @@
         "print(sorted(fruits.items(), key=itemgetter(0)))    # sort by key of dictionary\n",
         "print(sorted(fruits.items(), key=itemgetter(1)))    # sort by value of dictionary"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +543,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "L8AV1vSYSJpS",
-        "outputId": "2362e55f-1a1d-43cb-debe-a8a225135939"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7dc483d9-61bd-4c2d-860b-352f47d0bcda"
       },
       "source": [
         "MItuple = ('MI', 'Michigan', 'Lansing')\n",
@@ -457,10 +562,12 @@
         "print(states[2][:])\n",
         "print(states[2][1:])\n",
         "\n",
+        "# The following line uses a lambda function\n",
+        "# (more on these in a bit)\n",
         "states.sort(key=lambda state: state[2])  # sort the states by their capital cities\n",
         "print(states)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,7 +599,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "5mmef5vVSJpS",
-        "outputId": "acd44e5d-7634-4919-a6e1-1cbf4e8ea766"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9c4fb2a2-1889-4936-80a1-2c15465a91d2"
       },
       "source": [
         "# using if-else statement\n",
@@ -511,7 +621,7 @@
         "else:\n",
         "    print(\"x =\", x, \"is neither positive nor negative\")"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,7 +637,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "VUi6CLi0SJpS",
-        "outputId": "1eb01d78-e6b6-48ca-8072-9d3cb9bc6d2a"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2f06fc96-bfa2-4c35-8f7f-072f2307c780"
       },
       "source": [
         "# using for loop with a list\n",
@@ -535,13 +648,15 @@
         "mylist = ['this', 'is', 'a', 'list']\n",
         "for word in mylist:\n",
         "    print(word.replace(\"is\", \"at\"))\n",
-        "    \n",
+        "\n",
+        "# we can use a list comprehension to create a list\n",
+        "# with compressed syntax\n",
         "mylist2 = [len(word) for word in mylist]   # number of characters in each word\n",
         "print(mylist2)\n",
         "\n",
         "# using for loop with list of tuples\n",
-        "\n",
-        "states = [('MI', 'Michigan', 'Lansing'),('CA', 'California', 'Sacramento'),\n",
+        "states = [('MI', 'Michigan', 'Lansing'),\n",
+        "          ('CA', 'California', 'Sacramento'),\n",
         "          ('TX', 'Texas', 'Austin')]\n",
         "\n",
         "sorted_capitals = [state[2] for state in states]\n",
@@ -549,12 +664,16 @@
         "print(sorted_capitals)\n",
         "\n",
         "# using for loop with dictionary\n",
-        "\n",
         "fruits = {'apples': 3, 'oranges': 4, 'bananas': 2, 'cherries': 10}\n",
-        "fruitnames = [k for (k,v) in fruits.items()]\n",
+        "\n",
+        "for k, v in fruits.items():\n",
+        "  print('key is', k, 'and value is', v)\n",
+        "\n",
+        "# Or, using a list comprehension\n",
+        "fruitnames = [k for (k, v) in fruits.items()]\n",
         "print(fruitnames)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,6 +684,10 @@
             "latt\n",
             "[4, 2, 1, 4]\n",
             "['Austin', 'Lansing', 'Sacramento']\n",
+            "key is apples and value is 3\n",
+            "key is oranges and value is 4\n",
+            "key is bananas and value is 2\n",
+            "key is cherries and value is 10\n",
             "['apples', 'oranges', 'bananas', 'cherries']\n"
           ],
           "name": "stdout"
@@ -575,11 +698,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "pSiWNNubSJpT",
-        "outputId": "0ad9d7f3-7fb3-4530-eaf2-4e98cd38dce1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3274f423-0023-48c8-bad9-2aba90ce88fb"
       },
       "source": [
         "# using while loop\n",
-        "\n",
         "mylist = list(range(-10,10))\n",
         "print(mylist)\n",
         "\n",
@@ -589,7 +714,7 @@
         "    \n",
         "print(\"First non-negative number:\", mylist[i])\n"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,14 +741,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "J16kNiQ5SJpT",
-        "outputId": "1714d846-9a82-4b5f-f7c8-1613dbb598da"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "76ebd5f3-10cb-4479-9307-67e335dd0c2e"
       },
       "source": [
         "myfunc = lambda x: 3*x**2 - 2*x + 3      # example of an unnamed quadratic function\n",
         "\n",
         "print(myfunc(2))"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,7 +766,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "0ewFrIxRSJpU",
-        "outputId": "11df7e1d-9a66-4bec-9dd3-db1b9c45b1d6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "33564df9-a7c5-4f03-bd23-d6b4dddd55a3"
       },
       "source": [
         "import math\n",
@@ -658,7 +789,7 @@
         "\n",
         "print(discard(mylist,True))    "
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -677,23 +808,29 @@
       "source": [
         "## 1.5 File I/O\n",
         "\n",
-        "You can read and write data from a list or other objects to a file."
+        "You can read and write data from a list or other objects to a file. The following code shows how to do this with basic Python, but we will typically use a higher level library like Pandas instead (stay tuned)."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "NVSbsoAmSJpU",
-        "outputId": "3628a669-9f91-4983-9b20-a64daa519182"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8e6df218-808d-42c1-e8d6-a91f68ba3517"
       },
       "source": [
         "# Make a list of tuples.\n",
-        "states = [('MI', 'Michigan', 'Lansing'),('CA', 'California', 'Sacramento'),\n",
-        "          ('TX', 'Texas', 'Austin'), ('MN', 'Minnesota', 'St Paul')]\n",
+        "states = [('MI', 'Michigan', 'Lansing'),\n",
+        "          ('CA', 'California', 'Sacramento'),\n",
+        "          ('TX', 'Texas', 'Austin'),\n",
+        "          ('MN', 'Minnesota', 'St Paul')]\n",
         "\n",
         "# Open an output file for writing and write each tuple to the file.\n",
         "with open('states.txt', 'w') as f:\n",
-        "    f.write('\\n'.join('%s,%s,%s' % state for state in states))\n",
+        "    for state in states:\n",
+        "       f.write('{},{},{}\\n'.format(state[0], state[1], state[2]))\n",
         "\n",
         "# Open an input file for reading and read in each line\n",
         "with open('states.txt', 'r') as f:\n",
@@ -701,9 +838,9 @@
         "        # split each line into its respective fields\n",
         "        # using a comma as a separator between fields.\n",
         "        fields = line.split(sep=',')\n",
-        "        print('State=',fields[1],'(',fields[0],')','Capital:', fields[2])"
+        "        print('State=', fields[1], '(', fields[0], ')', 'Capital:', fields[2])"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -714,22 +851,12 @@
             "\n",
             "State= Texas ( TX ) Capital: Austin\n",
             "\n",
-            "State= Minnesota ( MN ) Capital: St Paul\n"
+            "State= Minnesota ( MN ) Capital: St Paul\n",
+            "\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hT_awmX1SJpU"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
