--- a/labs/lab06_srs.ipynb
+++ b/labs/lab06_srs.ipynb
@@ -6,7 +6,7 @@
       "name": "lab06_srs.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyObzACTESjcvIQ2/W3w4Hqj",
+      "authorship_tag": "ABX9TyNMcrk6OzknyuWO0tup9Dth",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
           "height": 478
         },
         "id": "8KQPYjHSv-vq",
-        "outputId": "3f5b42eb-32e8-4a57-87b9-bed416101318"
+        "outputId": "735041d9-dd12-4f7c-f044-73391395316f"
       },
       "source": [
         "# DMML student survey data\n",
@@ -380,7 +380,7 @@
           "height": 564
         },
         "id": "f4wfPwojwRfw",
-        "outputId": "f7656842-e30c-4269-8bf1-44cc61a1489e"
+        "outputId": "403f2105-e235-4b47-a2e0-19126400d59b"
       },
       "source": [
         "# Drop bad rows\n",
@@ -560,7 +560,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oXELP-o7w1gh",
-        "outputId": "7ddcf65c-0465-4e35-cbdb-29b20df4a117"
+        "outputId": "f2709b92-cfa4-4369-9748-34a49608f8e4"
       },
       "source": [
         "impressions = df_clean['Impressions']\n",
@@ -613,7 +613,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pmjfQ8Ptxeda",
-        "outputId": "89d49d04-fb67-4bde-fd20-56e6f5f0871a"
+        "outputId": "0f42844e-6e45-4313-c11a-c0518c4b1a42"
       },
       "source": [
         "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -661,7 +661,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yDAV3gU2xCW2",
-        "outputId": "eec0846a-59f4-4b9c-dbc0-72c9f608cb10"
+        "outputId": "78cb1383-a157-42c2-ee0a-7c48a8030896"
       },
       "source": [
         "from sklearn.feature_extraction.text import TfidfTransformer\n",
@@ -707,7 +707,7 @@
           "height": 1000
         },
         "id": "L7p6AyORBMF3",
-        "outputId": "942aae79-3275-429e-f274-4456d0e04496"
+        "outputId": "40e16f73-3389-4f66-e34c-90d7f2753099"
       },
       "source": [
         "# Display feature vectors as a heatmap\n",
@@ -745,7 +745,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "en5GeVF0C5Mc",
-        "outputId": "027ee514-4211-40cd-c395-8b5ddd58e646"
+        "outputId": "4a11ee13-ac07-441c-fd88-58373efa63b8"
       },
       "source": [
         "# Build model to return nearest neighbors\n",
@@ -767,7 +767,7 @@
           "data": {
             "text/plain": [
               "NearestNeighbors(algorithm='brute', leaf_size=30,\n",
-              "                 metric=<function cosine at 0x7f5f7c7040e0>, metric_params=None,\n",
+              "                 metric=<function cosine at 0x7fb17eca90e0>, metric_params=None,\n",
               "                 n_jobs=None, n_neighbors=5, p=2, radius=1.0)"
             ]
           },
@@ -785,7 +785,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a80eac62-0d11-4c9c-8b74-3719b1022ef8"
+        "outputId": "4fe3e68f-f7a8-4db0-a398-687874e28c33"
       },
       "source": [
         "new_example = [\"I think it's interesting and important for lots of applications that can help improve people's lives.\"]\n",
@@ -861,11 +861,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sNLk-YU_H4gg",
-        "outputId": "2e793bfe-176e-4dad-9746-b05a70471263"
+        "outputId": "7151f6e4-cc96-4624-f769-773e81aee67f"
       },
       "source": [
         "# Which features were non-zero?\n",
-        "mask = np.array(new_counts)[0] == 1\n",
+        "mask = np.array(new_counts)[0] >= 1\n",
         "np.array(count_vect.get_feature_names())[mask]\n"
       ],
       "execution_count": 10,
@@ -892,7 +892,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rrHteVwNH86Z",
-        "outputId": "de3b1ba9-ca18-4b0f-92b4-77844b3e39c8"
+        "outputId": "e434e774-a2d9-4ea9-f8c2-27347e92634d"
       },
       "source": [
         "# Which feature had the highest score?\n",
@@ -918,7 +918,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2DTZnh46I81j",
-        "outputId": "a3adec5a-3168-452c-ffff-88148947be4c"
+        "outputId": "f44fda42-0393-4e2d-93e6-c13e862c19a4"
       },
       "source": [
         "distance, neighbor_idx = model.kneighbors(new_tfidf)\n",
@@ -947,7 +947,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M4DgYicELZDX",
-        "outputId": "94329994-3101-4f0d-8f7c-3b50d2770d6f"
+        "outputId": "ca228bfc-f33f-4668-ff4b-a1cf235983dd"
       },
       "source": [
         "for i in range(5):\n",
@@ -1000,7 +1000,7 @@
           "height": 419
         },
         "id": "I8ttLmg_l8yk",
-        "outputId": "7b977eaf-6fc4-4790-94a0-2cc3ab3e22c7"
+        "outputId": "4d0aa5cc-1289-4b46-d4bc-999a1aea3b1f"
       },
       "source": [
         "df = pd.DataFrame()\n",
@@ -1130,7 +1130,7 @@
           "height": 700
         },
         "id": "iAVZXCmcoATw",
-        "outputId": "efc63657-226d-4148-d7c5-c69ff5969a72"
+        "outputId": "56203a9e-113f-4a31-96aa-6f889ed22b5a"
       },
       "source": [
         "df = df[df['count'] > 2]\n",
@@ -1314,7 +1314,7 @@
           "height": 295
         },
         "id": "LRrxVlc2lsoH",
-        "outputId": "3b4a1df5-5f24-4595-ffa7-2779766c1d84"
+        "outputId": "b0731866-7cfd-47c0-ced2-f36b24cabacb"
       },
       "source": [
         "df.plot(y='count', x='term', kind='barh', legend=None)\n",
@@ -1369,7 +1369,7 @@
           "height": 716
         },
         "id": "gimg3TwCkAZ8",
-        "outputId": "41dfa76d-bce3-42dc-d045-8135b3b89f55"
+        "outputId": "27143551-ed01-48e7-d2fb-a04bfd395be0"
       },
       "source": [
         "# Display feature vectors as a heatmap\n",
